fix: color contrast issue on header title anchor (#166)

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -11,11 +11,6 @@ header.appHeader {
 	div.name {
 		margin: 0 1rem;
 		flex: 1;
-		a {
-			color: $accent;
-			text-decoration: none;
-			flex: 1;
-		}
 	}
 
 	div.logos {
